--- a/dev/haml/partials/_doc_head.haml
+++ b/dev/haml/partials/_doc_head.haml
@@ -15,7 +15,7 @@
 	-# %meta{:name => "robots", :content => "noindex, nofollow"}
 
 	%link{:rel => "stylesheet", :type => "text/css", :href => "//cloud.typography.com/7172754/762086/css/fonts.css"}
-	%link{:rel => "stylesheet", :type => "text/css", :href => "assets/css/styles.min.css?v=1"}
+	%link{:rel => "stylesheet", :type => "text/css", :href => "assets/css/styles.css?v=1"}
 
 	%script
 		= Haml::Engine.new(File.read("dev/haml/partials/_js_fonts.haml")).render
