implemented most scrolling code

--- a/dev/haml/partials/_html_header.haml
+++ b/dev/haml/partials/_html_header.haml
@@ -1,23 +1,26 @@
-%header
+%header#home
+
+	-# <a data-scroll data-options='{ "speed": 500, "easing": "easeInOutCubic", "offset": 0, "updateURL": false }'>
 
 	.wrap_viewport
 
 		%div{"data-container" => "width_848"}
 
-			%nav
-				%svg.svg_nn-logo-thick
-					%use{"xlink:href" => "#nn_logo-thick"}
+			%nav{"data-current" => "home"}
+				%a.nav_logo.wrap_svg{:href => "#home", :title => "Back To Top", "data-scroll" => true}
+					%svg.svg_nn-logo-thick
+						%use{"xlink:href" => "#nn_logo-thick"}
 				%ul
 					%li
-						%a{:href => "#reserve", :title => "Reserve", "data-scroll" => true} Reserve
+						%a{:href => "#reserve", :title => "Reserve", "data-scroll" => true, 'data-options' => '{"offset":150}'} Reserve
 					%li
-						%a{:href => "#foodwine", :title => "Food and Wine", "data-scroll" => true} Food &amp; Wine
+						%a{:href => "#foodwine", :title => "Food and Wine", "data-scroll" => true, 'data-options' => '{"offset":86}'} Food &amp; Wine
 					%li
-						%a{:href => "#bacaro", :title => "Bacaro", "data-scroll" => true} Bacaro
+						%a{:href => "#bacaro", :title => "Bacaro", "data-scroll" => true, 'data-options' => '{"offset":86}'} Bacaro
 					%li
 						%a{:href => "#private", :title => "Private Dining", "data-scroll" => true} Private Dining
 					%li
-						%a{:href => "#photos", :title => "Photos", "data-scroll" => true} Photos
+						%a{:href => "#photos", :title => "Photos", "data-scroll" => true, 'data-options' => '{"offset":86}'} Photos
 					%li
 						%a#email_header{:href => "#", :title => "Get in Touch"} Get in Touch
 
