--- a/dev/styles/_queries.scss
+++ b/dev/styles/_queries.scss
@@ -67,10 +67,10 @@
 		vertical-align: middle;
 	}
 	div.nn_logo {
-		margin-bottom: 8rem;
+		margin-bottom: 7rem;
 	}
 	div.nn_wordmark {
-		margin-bottom: 14rem;
+		margin-bottom: 12rem;
 	}
 	h3.address {
 		letter-spacing: 1rem;
@@ -165,6 +165,10 @@
 	article.lunchdinner span.tag_circle {
 		top: 10rem;
 		right: -3.2rem;
+	}
+	div.wrap_menu div.menu_list h6 {
+		margin-bottom: 6rem;
+		font-size: 1.6rem;
 	}
 	// + menu toggle + \\
 	h4.temp_title, // remove this
@@ -298,24 +302,6 @@
 
 }
 
-@media only screen and (min-width: 57em) and (max-height: 57em) { // 912px / 16px = 57em
-
-// ==|== common sections ======================================================
-// ============================================================================
-
-	// Header
-	// ----------------------------------------------------------------------------
-	div.nn_logo {
-		display: none;
-	}
-	// --- Navigation --- \\
-	nav svg {
-		display: block;
-		opacity: 1;
-	}
-
-}
-
 @media only screen and (min-width: 60em) { // 960px / 16px = 60em
 
 // ==|== common sections ======================================================
@@ -329,6 +315,9 @@
 	}
 	nav ul li a {
 		// font-size: 1.8rem;
+	}
+	nav a.nav_logo {
+		display: block;
 	}
 
 	// Footer
@@ -372,6 +361,23 @@
 
 }
 
+@media only screen and (min-width: 64em) and (max-height: 55em) { // 1024px / 16px = 64em | 880px / 16px = 55em
+
+// ==|== common sections ======================================================
+// ============================================================================
+
+	// Header
+	// ----------------------------------------------------------------------------
+	div.nn_logo {
+		display: none;
+	}
+	// --- Navigation --- \\
+	nav a.nav_logo {
+		opacity: 1;
+	}
+
+}
+
 @media only screen and (min-width: 75em) { // 1200px / 16px = 75em
 
 // ==|== common sections ======================================================
@@ -382,10 +388,6 @@
 	header {
 		// padding-bottom: 20rem;
 		margin-bottom: 13.2rem;
-	}
-	// --- Navigation --- \\
-	nav svg {
-		display: block;
 	}
 
 // ==|== page styles ==========================================================
