resolved some bugs

--- a/dev/haml/partials/_html_header.haml
+++ b/dev/haml/partials/_html_header.haml
@@ -1,7 +1,5 @@
 %header#home
 
-	-# <a data-scroll data-options='{ "speed": 500, "easing": "easeInOutCubic", "offset": 0, "updateURL": false }'>
-
 	.wrap_viewport
 
 		%div{"data-container" => "width_848"}
@@ -12,15 +10,15 @@
 						%use{"xlink:href" => "#nn_logo-thick"}
 				%ul
 					%li
-						%a{:href => "#reserve", :title => "Reserve", "data-scroll" => true, 'data-options' => '{"offset":150}'} Reserve
+						%a{:href => "#reserve", :title => "Reserve", "data-scroll" => true, "data-options" => '{"offset":150}'} Reserve
 					%li
-						%a{:href => "#foodwine", :title => "Food and Wine", "data-scroll" => true, 'data-options' => '{"offset":86}'} Food &amp; Wine
+						%a{:href => "#foodwine", :title => "Food and Wine", "data-scroll" => true, "data-options" => '{"offset":86}'} Food &amp; Wine
 					%li
-						%a{:href => "#bacaro", :title => "Bacaro", "data-scroll" => true, 'data-options' => '{"offset":86}'} Bacaro
+						%a{:href => "#bacaro", :title => "Bacaro", "data-scroll" => true, "data-options" => '{"offset":86}'} Bacaro
 					%li
 						%a{:href => "#private", :title => "Private Dining", "data-scroll" => true} Private Dining
 					%li
-						%a{:href => "#photos", :title => "Photos", "data-scroll" => true, 'data-options' => '{"offset":86}'} Photos
+						%a{:href => "#photos", :title => "Photos", "data-scroll" => true, "data-options" => '{"offset":86}'} Photos
 					%li
 						%a#email_header{:href => "#", :title => "Get in Touch"} Get in Touch
 
