--- a/dev/styles/_queries.scss
+++ b/dev/styles/_queries.scss
@@ -54,11 +54,8 @@
 	header {
 		display: table;
 		table-layout: fixed;
-		// position: relative;
 		margin-bottom: 7.2rem;
 		padding: 10rem 3.2rem 3.2rem 3.2rem;
-		// padding: 20rem 3.2rem 18rem 3.2rem;
-		// padding: 0 3.2rem;
 		width: 100%;
 		height: 100vh;
 	}
@@ -107,15 +104,12 @@
 	div.wrap_content p,
 	div.wrap_content cite {
 		margin-bottom: 4rem;
-		font-size: 1.6rem; // was 18px and 600 weight
+		font-size: 1.6rem;
 		line-height: 1.6;
 	}
 	// + headings + \\
 	article h3 {
 		letter-spacing: 0.8rem;
-	}
-	article h5 {
-		// margin-bottom: 4rem;
 	}
 	// --- Wrap Heading --- \\
 	div.wrap_heading {
@@ -131,8 +125,6 @@
 	// --- Tag: Circle --- \\
 	.tag_circle {
 		position: absolute;
-		// top: 0;
-		// left: 0;
 		margin-bottom: 0;
 		width: 14.6rem;
 		height: 14.6rem;
@@ -174,7 +166,6 @@
 		margin-bottom: 6rem;
 	}
 	// + menu toggle + \\
-	h4.temp_title, // remove this
 	ul.menu_toggle {
 		margin-bottom: 10rem;
 	}
@@ -185,9 +176,6 @@
 		right: -6.6rem;
 	}
 	// + menu list + \\
-	div.menu_list ul {
-		// margin-bottom: 10rem;
-	}
 	div.menu_list ul li {
 		font-size: 1.6rem;
 		line-height: 1;
@@ -306,9 +294,6 @@
 	nav ul li {
 		margin-right: 3.2rem;
 	}
-	nav ul li a {
-		// font-size: 1.8rem;
-	}
 
 	// Footer
 	// ----------------------------------------------------------------------------
@@ -390,7 +375,6 @@
 	// Header
 	// ----------------------------------------------------------------------------
 	header {
-		// padding-bottom: 20rem;
 		margin-bottom: 13.2rem;
 	}
 
@@ -405,6 +389,22 @@
 	section.gift,
 	article.lunchdinner {
 		margin-bottom: 20rem;
+	}
+
+	// Food & Wine
+	// ----------------------------------------------------------------------------
+	// --- Lunch & Dinner --- \\
+	article.lunchdinner span.tag_circle {
+		right: -20rem;
+	}
+	// + menu list + \\
+	div.menu_list ul li span.menu_item {
+		// truncate styles
+		max-width: 58rem;
+	}
+	// --- Wine --- \\
+	article.wine a.tag_circle {
+		left: -20rem;
 	}
 
 	// Bacaro
