beginning work on gallery modal

--- a/dev/haml/partials/_html_footer.haml
+++ b/dev/haml/partials/_html_footer.haml
@@ -16,4 +16,5 @@
 
 	%p.copyright &copy; 2015
 
+= Haml::Engine.new(File.read("dev/haml/partials/_modal_gallery.haml")).render
 = Haml::Engine.new(File.read("dev/haml/partials/_doc_scripts.haml")).render
