--- a/dev/haml/partials/_html_header.haml
+++ b/dev/haml/partials/_html_header.haml
@@ -4,7 +4,7 @@
 
 		%div{"data-container" => "width_848"}
 
-			%nav{"data-current" => "home"}
+			%nav#nav_main.nav_main{"data-current" => "home"}
 				%a.nav_logo.wrap_svg{:href => "#home", :title => "Back To Top", "data-scroll" => true}
 					%svg.svg_nn-logo-thick
 						%use{"xlink:href" => "#nn_logo-thick"}
