--- a/dev/haml/partials/_sec_foodwine.haml
+++ b/dev/haml/partials/_sec_foodwine.haml
@@ -228,7 +228,8 @@
 				-# %cite –Piny the Elder
 
 		%a.tag_circle.wine_full{:href => "assets/files/wine_list_web.pdf", :title => "View Full Wine List", :target => "_blank"}
-			%p.tag_text View Full Wine List
+			:plain
+				<p class="tag_text">See <br> Full Wine List</p>
 
 		-# %p.wines We carry too many wines to list them all here, but here are a few of our favourites.
 
