--- a/dev/haml/index.haml
+++ b/dev/haml/index.haml
@@ -1,5 +1,8 @@
 !!!
-%html{:lang => "en"}
+/[if IE 9] <html class="ie9" lang="en">
+<!--[if gt IE 9]><!-->
+%html{:lang => "en"}<>
+	<!--<![endif]-->
 
 	= Haml::Engine.new(File.read("dev/haml/partials/_doc_head.haml")).render
 
