--- a/dev/styles/_main.scss
+++ b/dev/styles/_main.scss
@@ -57,9 +57,14 @@ div.wrap_menu div.menu_list {
 	transition: opacity 0.6s ease-in-out;
 	// will-change: opacity;
 }
+
+
+[data-modal],
 [data-overlay] {
-	transition: opacity 0.3s ease-in-out; // visibility 0.3s ease-in-out
+	transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
 }
+
+
 // --- Animations --- \\
 @keyframes animShow {
 	0%   { opacity: 0; }
@@ -168,22 +173,24 @@ a:active {
 	right: 0;
 	bottom: 0;
 	left: 0;
-	background-color: hsla(0,0%,96%,0.8);
+	background-color: $hsla_L96-A98;
 }
 // --- Overlay Active --- \\
 html.overlay_active,
 html.overlay_active body {
 	overflow-y: hidden;
 }
+/*
 // [data-overlay].loaded
 [data-modal].loaded {
 	visibility: visible;
 }
+*/
 
 
-aside[data-modal="gallery"] {
 
-}
+
+
 
 // --- Modal --- \\
 [data-modal] {
@@ -193,16 +200,35 @@ aside[data-modal="gallery"] {
 	right: 0;
 	bottom: 0;
 	left: 0;
+
 	// width: 100%;
 	// height: 100%;
-	// visibility: hidden; // requires visibility in order to hide animation on initial page load... set to 'visible' via JS class 'loaded'
+
+	opacity: 0;
+	visibility: hidden; // requires visibility in order to hide animation on initial page load... set to 'visible' via JS class 'loaded'
+
 	overflow-y: scroll;
 	-webkit-overflow-scrolling: touch;
 }
-
 [data-modal] div.modal_body {
 	overflow: hidden;
 }
+
+[data-modal] {
+	opacity: 1;
+	visibility: visible;
+}
+
+// + modal: gallery + \\
+aside[data-modal="gallery"] {
+	padding-top: 6.4rem;
+}
+aside[data-modal="gallery"] img {
+	margin: 0 auto;
+}
+
+
+
 
 
 // --- Gallery Navigation --- \\
@@ -214,27 +240,14 @@ nav.nav_gallery {
 	left: 0;
 	height: 6.4rem;
 	text-align: center;
-	background-color: hsla(0,0%,100%,0.96);
-}
-nav.nav_gallery a.nav_close {
-	display: inline-block;
-	padding: 2.3rem 2rem 2.2rem 2rem;
-	font-size: 1.4rem;
-	text-transform: uppercase;
-	color: $hsla_blue;
-}
-nav.nav_gallery a.nav_close:hover {
-	color: $hsla_gold;
-}
-nav.nav_gallery a.nav_close:active {
-	color: $hsla_gold-D;
+	background-color: $hsla_L96-A98;
 }
 nav.nav_gallery a.wrap_svg {
 	position: absolute;
 	top: 0;
-	padding: 1.4rem;
-	width: 6.4rem; // actual width of svg: 3.6rem
-	height: 6.4rem; // actual height of svg: 3.6rem
+	padding: 1.6rem;
+	width: 6.4rem; // actual width of svg: 3.2rem
+	height: 6.4rem; // actual height of svg: 3.2rem
 }
 nav.nav_gallery a.wrap_svg.nav_prev {
 	left: 0;
@@ -242,6 +255,10 @@ nav.nav_gallery a.wrap_svg.nav_prev {
 }
 nav.nav_gallery a.wrap_svg.nav_next {
 	right: 0;
+}
+nav.nav_gallery a.nav_close {
+	left: 50%;
+	margin-left: -3.2rem;
 }
 nav.nav_gallery a.wrap_svg svg {
 	fill: $hsla_blue;
@@ -342,7 +359,7 @@ nav.nav_main {
 	left: 0;
 	right: 0;
 	padding: 3.2rem 0;
-	background-color: hsla(0,0%,96%,0.98);
+	background-color: $hsla_L96-A98;
 	border-top: 0.6rem solid $hsla_blue;
 }
 nav.nav_main a.nav_logo {
