--- a/dev/haml/partials/_sec_photos.haml
+++ b/dev/haml/partials/_sec_photos.haml
@@ -10,5 +10,6 @@
 		.gutter-sizer
 
 		- (1..17).each do |i|
-			%a.gallery_link{:href => "assets/img/full-nn_#{i}.jpg", :title => "View Photo"}
+			- zeroBase = i - 1
+			%a.gallery_link{:href => "assets/img/full-nn_#{i}.jpg", :title => "View Photo", "data-gallery" => "#{zeroBase}"}
 				%img{:src => "assets/img/nn_#{i}.jpg", :alt => ""}
